# Intelligence-Hub

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-TW.md  main.py  pyproject.toml  requirements.txt
.github/: SECURITY.md  pull_request_template.md
connectors/: cloud_llm.py  domain.py  domain_rss.py  github.py  github_trending.py  notion.py  obsidian.py  ollama.py  papers.py  retry.py  telegram.py
contracts/: __init__.py  watchlist.py
core/: acceptance.py  agent_runtime.py  alerting.py  api.py  canonical_knowledge.py  cli.py  config.py  credential_setup.py  cross_signal_analysis.py  daily_pipeline.py  dashboard_pipeline.py  decision_engine.py  decision_review_pipeline.py  delivery.py  docs_loader.py  doctor.py  domain_radar.py  env_file.py  github_radar.py  insight_engine.py  intelligence_brief.py  intelligence_engine.py  intelligence_synthesis.py  knowledge_loader.py  memory.py  memory_engine.py  memory_export.py  model_policy.py  model_router.py  notification_outbox.py  notion_provisioning.py  obsidian_publisher.py  obsidian_read_model.py  obsidian_renderer.py  operational_status.py  orchestrator.py  paper_radar.py  period_pipeline.py  platform_runtime.py  proposal_gate.py  (+19 more)
dashboard/: app.js  index.html  styles.css
docs/: AGENTS.md  ARCHITECTURE.md  AUTOMATION.md  CONFIGURATION.md  CONTRIBUTING.md  DEMO.md  IMPLEMENTATION_STATUS.md  LICENSE_COMPLIANCE.md  NOTION_WORKSPACE.md  PRD.md  PRINCIPLES.md  PRODUCT_DEFINITION.md  PROJECT_ORGANIZATION.md  QUICKSTART.md  README.md  RELEASE.md  ROADMAP.md  RUNBOOK.md  VISION.md  (+3 more)
(+167 files in other folders)
