[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligence-hub"
version = "0.1.0rc3"
description = "Local-first decision intelligence platform."
requires-python = ">=3.11,<3.12"
dependencies = [
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
]

[project.scripts]
intelligence-hub = "core.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["connectors*", "contracts*", "core*", "hermes*", "scripts*", "workflows*"]
namespaces = true

[tool.pytest.ini_options]
tmp_path_retention_policy = "none"
